# optimality-of-decentralization

./: .gitmodules  README.md  pyproject.toml
experiments/: create_config.py  train.py
experiments/configs/: reproduce_DCMAC.yaml  reproduce_DDMAC.yaml  reproduce_IAC.yaml  reproduce_IACC.yaml  reproduce_IACC_PS.yaml  reproduce_IAC_PS.yaml  reproduce_JAC.yaml
results/: results.ipynb
